--- a/dark.html
+++ b/dark.html
@@ -16,8 +16,7 @@ html {
 header,
 main,
 footer,
-.mainContentHere,
-footer > div {
+.mainContentHere {
   width: 100vw;
 }
 div:has(> header),
@@ -98,6 +97,7 @@ footer > div {
   align-items: start;
   gap: 15px;
   flex-wrap: wrap;
+  width: calc(100vw - 30px)
 }
 footer {
   background: linear-gradient(#2b0000e0, #050000e0);
