--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Designed HTML templates</title>
+    <style>
+      body, html{
+        margin: 0;
+      }
+      html{
+        padding: 0;
+      }
+      body{
+        padding: 15px;
+        
+      }
+    </style>
   </head>
   <body>
     <a href="reading-template.html">Reading template</a>
