--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
       }
       body{
         padding: 15px;
-        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      a{
+        min-width: 29vw;
+        min-height: 29vw;
+        border: 1px solid #222;
+        border-radius: 7px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     </style>
   </head>
