--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        min-height: 100vh;
+        box-sizing: border-box;
       }
       a{
         min-width: 29vw;
