--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        background: #e74c3c;
         min-height: 100vh;
         box-sizing: border-box;
       }
@@ -23,6 +24,7 @@
         min-height: 29vw;
         border: 1px solid #222;
         border-radius: 7px;
+        background: #ecf0f1;
         display: flex;
         align-items: center;
         justify-content: center;
