--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         min-height: 29vw;
         border: 1px solid #222;
         border-radius: 7px;
+        font-size: 25px;
         background: #ecf0f1;
         display: flex;
         align-items: center;
