--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         box-sizing: border-box;
       }
       a{
-        min-width: 29vw;
-        min-height: 29vw;
+        min-width: 19vw;
+        min-height: 19vw;
         border: 1px solid #222;
         border-radius: 7px;
         font-size: 25px;
         background: #ecf0f1;
+        color: black;
         display: flex;
         align-items: center;
         justify-content: center;
