--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       a{
         min-width: 19vw;
         min-height: 19vw;
+        padding: 15px;
         border: 1px solid #222;
         border-radius: 7px;
         font-size: 25px;
