--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #e74c3c;
+        background: url("https://cdn.pixabay.com/photo/2017/02/14/09/02/wood-2065366_960_720.jpg");
+        background-size: cover;
+        background-position: center;
         min-height: 100vh;
         box-sizing: border-box;
       }
