--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         justify-content: center;
         background: url("https://cdn.pixabay.com/photo/2017/02/14/09/02/wood-2065366_960_720.jpg");
         background-size: cover;
+        background-attachment: fixed;
         background-position: center;
         min-height: 100vh;
         box-sizing: border-box;
