--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       body{
         padding: 15px;
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: center;
         background: url("https://cdn.pixabay.com/photo/2017/02/14/09/02/wood-2065366_960_720.jpg");
@@ -29,7 +30,7 @@
         border: 1px solid #222;
         border-radius: 7px;
         font-size: 25px;
-        background: #ecf0f1;
+        background: #05050555;
         color: black;
         display: flex;
         align-items: center;
@@ -42,5 +43,7 @@
   </head>
   <body>
     <a href="reading-template.html">Reading template</a>
+    <a href="night-template.html">Night template</a>
+    <a href="day">Day template</a>
   </body>
 </html>
