--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         background: #05050555;
         color: black;
         display: flex;
+        text-shadow: 0 0 3px white;
         align-items: center;
         justify-content: center;
         text-decoration: none;
