--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
         min-width: 19vw;
         min-height: 19vw;
         padding: 15px;
-        border: 1px solid #222;
         border-radius: 15px;
         font-size: 25px;
         background: #05050555;
-        color: black;
+        color: white;
         display: flex;
-        text-shadow: 0 0 3px white;
+        text-shadow: 0 0 5px black;
         align-items: center;
         justify-content: center;
         text-decoration: none;
