--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         padding: 15px;
         display: flex;
         flex-wrap: wrap;
+        gap: 1vw;
         align-items: center;
         justify-content: center;
         background: url("https://cdn.pixabay.com/photo/2017/02/14/09/02/wood-2065366_960_720.jpg");
