--- a/index.html
+++ b/index.html
@@ -40,11 +40,21 @@
         font-family: ui-system;
         text-transform: uppercase;
       }
+      h3{
+        color: white;
+        font-family: ui-system;
+        font-size: 25px;
+      }
+      h3 span{
+        color: red;
+        text-transform: uppercase;
+      }
     </style>
   </head>
   <body>
     <a href="reading-template.html">Reading template</a>
     <a href="night-template.html">Night template</a>
     <a href="day">Day template</a>
+    <h3>By t<span>i</span>dyc<span>o</span>der</h3>
   </body>
 </html>
