--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       body{
         padding: 15px;
         display: flex;
-        flex-wrap: wrap;
-        gap: 1vw;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         background: url("https://cdn.pixabay.com/photo/2017/02/14/09/02/wood-2065366_960_720.jpg");
@@ -52,9 +51,11 @@
     </style>
   </head>
   <body>
-    <a href="reading-template.html">Reading template</a>
-    <a href="night-template.html">Night template</a>
-    <a href="day">Day template</a>
+    <div style="display: flex; gap: 1vw; flex-wrap: wrap;">
+      <a href="reading-template.html">Reading template</a>
+      <a href="night-template.html">Night template</a>
+      <a href="day">Day template</a>
+    </div>
     <h3>By t<span>i</span>dyc<span>o</span>der</h3>
   </body>
 </html>
