--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         font-family: ui-system;
         text-transform: uppercase;
       }
+      a:hover{
+        scale: 1.1;
+      }
       h3{
         color: white;
         font-family: ui-system;
@@ -51,10 +54,10 @@
     </style>
   </head>
   <body>
-    <div style="display: flex; gap: 1vw; flex-wrap: wrap;">
+    <div style="display: flex; gap: 1vw; flex-wrap: wrap; align-items: center;justify-content:center">
       <a href="reading-template.html">Reading template</a>
       <a href="night-template.html">Night template</a>
-      <a href="day">Day template</a>
+      <a href="day-template.html">Day template</a>
     </div>
     <h3>By t<span>i</span>dyc<span>o</span>der</h3>
   </body>
