--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
         text-decoration: none;
         font-family: ui-system;
         text-transform: uppercase;
+        transition: 355ms all;
       }
       a:hover{
-        scale: 1.1;
+        scale: 1.05;
       }
       h3{
         color: white;
