--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       h3{
         color: white;
         font-family: ui-system;
-        font-size: 45px;
+        font-size: 3vw;
       }
       h3 span{
         color: red;
@@ -60,6 +60,6 @@
       <a href="night-template.html">Night template</a>
       <a href="day-template.html">Day template</a>
     </div>
-    <h3>By t<span>i</span>dyc<span>o</span>der</h3>
+    <h3><span style="color: white; font-size: 1.5vw">by</span> t<span>i</span>dyc<span>o</span>der</h3>
   </body>
 </html>
