--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
         color: red;
         text-transform: uppercase;
       }
+      h1{
+        text-shadow: 0 0 5px black;
+        color: white;
+        font-size: 3vw;
+      }
     </style>
   </head>
   <body>
+    <h1>Designed HTML templates</h1>
     <div style="display: flex; gap: 1vw; flex-wrap: wrap; align-items: center;justify-content:center">
       <a href="reading-template.html">Reading template</a>
       <a href="night-template.html">Night template</a>
