--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         min-height: 19vw;
         padding: 15px;
         border-radius: 15px;
-        font-size: 25px;
+        font-size: 5vw;
         background: #05050555;
         color: white;
         display: flex;
