--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         min-height: 19vw;
         padding: 15px;
         border-radius: 15px;
-        font-size: 4vw;
+        font-size: min(4vw, 25px);
         background: #05050555;
         color: white;
         display: flex;
