--- a/index.html
+++ b/index.html
@@ -23,25 +23,37 @@
         min-height: 100vh;
         box-sizing: border-box;
       }
-      a{
-        min-width: 19vw;
-        min-height: 19vw;
-        padding: 15px;
-        border-radius: 15px;
-        font-size: max(1vw, 25px);
-        background: #05050555;
-        color: white;
+      a {
         display: flex;
-        text-shadow: 0 0 5px black;
+        box-sizing: border-box;
         align-items: center;
-        justify-content: center;
+        color: white;
         text-decoration: none;
-        font-family: ui-system;
-        text-transform: uppercase;
-        transition: 355ms all;
+        min-width: min(255px, 100vw);
+        min-height: min(255px, 100vw);
+        height: fit-content;
+        justify-content: center;
+        flex-direction: column;
+        padding: 15px;
+        border: 1px solid #333;
+        border-radius: 15px;
+        position: relative;
+        z-index: 3;
+      }
+      a:before{
+        content: "";
+        display: block;
+        position: absolute;
+        border: 1px solid #333;
+        border-radius: 15px;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        backdrop-filter: blur(5px);
       }
       a:hover{
         scale: 1.05;
+        color: #aaa;
       }
       h3{
         color: white;
