--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background: url("https://cdn.pixabay.com/photo/2017/02/14/09/02/wood-2065366_960_720.jpg");
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: center;
+        background: black;
         min-height: 100vh;
         box-sizing: border-box;
       }
