--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
       <a href="reading-template.html">Reading template</a>
       <a href="night-template.html">Night template</a>
       <a href="day-template.html">Day template</a>
+      <a href="orange-template.html">Orange template</a>
+      <a href="learning-template.html">Learning template</a>
+      <a href="coding-template.html">Coding template</a>
     </div>
     <h3><span style="color: white; font-size: 1.5vw">by</span> t<span>i</span>dyc<span>o</span>der</h3>
   </body>
