--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         position: relative;
         color: #aaa;
         z-index: 3;
-        transition: 1s all;
+        transition: 100ms all;
       }
       a:before{
         content: "";
