--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
     <h1>Designed HTML templates</h1>
     <div style="display: flex; gap: 1vw; flex-wrap: wrap; align-items: center;justify-content:center">
       <a href="reading-template.html">Reading template</a>
-      <iframe src="reading-template.html"/>
+      <iframe src="reading-template.html"></iframe>
       <a href="night-template.html">Night template</a>
-      <iframe src="night-template.html"/>
+      <iframe src="night-template.html"></iframe>
       <a href="day-template.html">Day template</a>
-      <iframe src="day-template.html"/>
+      <iframe src="day-template.html"></iframe>
       <a href="orange-template.html">Orange template</a>
-      <iframe src="orange-template.html"/>
+      <iframe src="orange-template.html"></iframe>
       <a href="learning-template.html">Learning template</a>
-      <iframe src="learning-template.html"/>
+      <iframe src="learning-template.html"></iframe>
       <a href="coding-template.html">Coding template</a>
-      <iframe src="coding-template.html"/>
+      <iframe src="coding-template.html"></iframe>
     </div>
     <h3><span style="color: white; font-size: 1.5vw">by</span> t<span>i</span>dyc<span>o</span>der</h3>
   </body>
