--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         color: red;
         text-transform: uppercase;
       }
+      iframe{
+        width: 100vw;
+        height: 100vh;
+      }
       h1{
         text-shadow: 0 0 5px black;
         color: white;
