--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: black;
+  background: url(https://cdn.pixabay.com/photo/2018/09/24/10/19/system-3699542_960_720.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
   min-height: 100vh;
   box-sizing: border-box;
 }
